--- a/static/index.html
+++ b/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js">
+<html >
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,26 +10,34 @@
         http://codelucas">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <meta property="og:title" content="Shorten.tv"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:image" content="http://codelucas.com/images/logo.png"/>
+        <meta property="og:url" content="http://www.shorten.tv/"/>
+        <meta property="og:site_name" content="Shorten.tv"/>
+        <meta property="fb:admins" content="lucas.ouyang.7"/>
+        <meta property="og:description" content="Real-time youtube summarization."/>
+
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
+        <!--<link rel="stylesheet" href="css/instant.css">-->
         <link rel="stylesheet" href="css/style.css">
+
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="http://www.google.com/jsapi?key=ABQIAAAANiTe_niYMpLXI3UDeUzpMRSVMlTdmhaYd1yaX4iiQjGBtAzFhxS96_Ey_JaUcWxxFqT4QZQh3TV1jQ" type="text/javascript"></script>
+        <!-- will add my own key asap -->
+        <script src="js/instant.js" type="text/javascript"></script>
+        <script src="js/shorten.js" type="text/javascript"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <!--
-        <div class="navbar navbar-default navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header"></div>
-
-            </div>
-        </div>
-        -->
-        <div class="container">
+       <div class="container">
             <div class="page-header" id="banner">
                 <div class="row">
                     <div class="col-lg-6">
@@ -39,14 +47,18 @@
 
                     <div class="col-lg-6">
                         <form target="." method="POST" class="form-horizontal">
-                            <div class="form-group url-input">
-                                <p>Enter the url of your favorite youtube video to get started.</p>
+                            <div class="url-input">
+                                <p class="searchBanner">Search for something 
+                                    you'd like to summarize.</p>
                                 <div class="input-group">
-                                    <input type="text" class="form-control" name="videoURL" id="focusedInput" 
-                                        placeholder="http://www.youtube.com/watch?v=moSFlvxnbgk"/>
-                                    <span class="input-group-btn">
+                                    <input type="text" class="" name="videoURL" id="searchBox"/>
+                                    <span id="searchTermKeyword">
+                                        
+                                    </span>
+                                    <!--<span class="input-group-btn">
                                         <button class="btn btn-default" type="button">submit</button>
                                     </span>
+                                    -->
                                 </div>
                             </div>
                         </form>
@@ -54,16 +66,32 @@
                 </div>
             </div>
 
-            <div class="col-centered">
-                <iframe width="900" height="550" frameborder="0" allowfullscreen
-                    src="http://www.youtube.com/embed/Nc9xq-TVyHI?start=110&end=119&autoplay=1">
-                </iframe>
+            <div id="videoDiv" class="col-centered">
+                <div id="innerVideoDiv">
+                    Loading...
+                </div>
+                <div id="videoTools" class="clearfix">
+                    <div class="boxHeader">
+                        Share this summarized video
+                    </div>
+                    <div id="shareTools">
+                        <span>Link </span><input id="linkUrl" value="" spellcheck="false"></input>
+                        <span>Embed </span><input id="embedUrl" value="" spellcheck="false"></input>
+                    </div>
+                </div>
             </div>
-
+            <!--
+            <div id="playlistWrapper">
+                <div id="buttonControl" class="pauseButton"><a href="javascript:void(0);">&nbsp;</a></div>
+                <div id="playlist" class="clearfix">&nbsp;</div>
+            </div>
+            -->
             <footer>
                 <div class="col-lg-12 col-centered footer-div" style="">
-                    <p>Built with love, by <a href="http://codelucas.com">Lucas</a>.
+                    CURRENTLY UNDER CONSTRUCTION, inspired by feross's website, ytinstant.com
                     <!--
+                    <p>Built with love, by <a href="http://codelucas.com">Lucas</a>.
+
                     &nbsp;View the code behind this project and more of his work 
                         <a href="https://github.com/codelucas/shorten.tv">here</a>.</p>
                     -->
@@ -71,18 +99,17 @@
             </footer>
         </div>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/shorten.js"></script>
+        <div id="hidden"></div>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
-        </script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-48277450-1', 'shorten.tv');
+          ga('send', 'pageview');
+
+        </script>      
     </body>
 </html>
