--- a/static/index.html
+++ b/static/index.html
@@ -22,15 +22,13 @@
         <link rel="icon" href="favicon.ico" type="image/x-icon">
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
-        <!--<link rel="stylesheet" href="css/instant.css">-->
         <link rel="stylesheet" href="css/style.css">
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="http://www.google.com/jsapi?key=ABQIAAAANiTe_niYMpLXI3UDeUzpMRSVMlTdmhaYd1yaX4iiQjGBtAzFhxS96_Ey_JaUcWxxFqT4QZQh3TV1jQ" type="text/javascript"></script>
-        <!-- will add my own key asap -->
-        <script src="js/instant.js" type="text/javascript"></script>
-        <script src="js/shorten.js" type="text/javascript"></script>
+        <!-- key=ABQIAAAANiTe_niYMpLXI3UDeUzpMRSVMlTdmhaYd1yaX4iiQjGBtAzFhxS96_Ey
+            _JaUcWxxFqT4QZQh3TV1jQ -->
+        <script src="http://www.google.com/jsapi" type="text/javascript"></script>
+        <script src="shorten.js" type="text/javascript"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -55,10 +53,6 @@
                                     <span id="searchTermKeyword">
                                         
                                     </span>
-                                    <!--<span class="input-group-btn">
-                                        <button class="btn btn-default" type="button">submit</button>
-                                    </span>
-                                    -->
                                 </div>
                             </div>
                         </form>
@@ -75,11 +69,14 @@
                         Share this summarized video
                     </div>
                     <div id="shareTools">
-                        <span>Link </span><input id="linkUrl" value="" spellcheck="false"></input>
-                        <span>Embed </span><input id="embedUrl" value="" spellcheck="false"></input>
+                        <span>Link:&nbsp; </span>
+                            <input id="linkUrl" value="" spellcheck="false"></input>
+                        <!--<span>Embed </span><input id="embedUrl" value="" 
+                            spellcheck="false"></input>-->
                     </div>
                 </div>
             </div>
+
             <!--
             <div id="playlistWrapper">
                 <div id="buttonControl" class="pauseButton"><a href="javascript:void(0);">&nbsp;</a></div>
@@ -88,6 +85,12 @@
             -->
             <footer>
                 <div class="col-lg-12 col-centered footer-div" style="">
+                    <div id="tipDiv" class="footerBox col-centered">
+                        <div id="tip">
+                            &nbsp;
+                        </div>
+                    </div>
+
                     CURRENTLY UNDER CONSTRUCTION, inspired by feross's website, ytinstant.com
                     <!--
                     <p>Built with love, by <a href="http://codelucas.com">Lucas</a>.
