--- a/static/index.html
+++ b/static/index.html
@@ -25,8 +25,6 @@
         <link rel="stylesheet" href="css/style.css">
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <!-- key=ABQIAAAANiTe_niYMpLXI3UDeUzpMRSVMlTdmhaYd1yaX4iiQjGBtAzFhxS96_Ey
-            _JaUcWxxFqT4QZQh3TV1jQ -->
         <script src="http://www.google.com/jsapi" type="text/javascript"></script>
         <script src="shorten.js" type="text/javascript"></script>
     </head>
@@ -44,7 +42,6 @@
                     </div>
 
                     <div class="col-lg-6">
-                        <form target="." method="POST" class="form-horizontal">
                             <div class="url-input">
                                 <p class="searchBanner">Search for something 
                                     you'd like to summarize.</p>
@@ -55,7 +52,6 @@
                                     </span>
                                 </div>
                             </div>
-                        </form>
                     </div>
                 </div>
             </div>
@@ -85,19 +81,17 @@
             -->
             <footer>
                 <div class="col-lg-12 col-centered footer-div" style="">
+                    <!--
                     <div id="tipDiv" class="footerBox col-centered">
                         <div id="tip">
                             &nbsp;
                         </div>
                     </div>
-
-                    CURRENTLY UNDER CONSTRUCTION, inspired by feross's website, ytinstant.com
-                    <!--
-                    <p>Built with love, by <a href="http://codelucas.com">Lucas</a>.
-
-                    &nbsp;View the code behind this project and more of his work 
-                        <a href="https://github.com/codelucas/shorten.tv">here</a>.</p>
                     -->
+
+                    <p>Built by <a href="http://codelucas.com">Lucas</a>.
+                    <br>
+                    <!--Inspired by <a href="http://youtubeinstant.com">youtube-instant</a>-->
                 </div>
             </footer>
         </div>
