added instrucitons to readme

--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,7 @@
         <meta property="og:url" content="http://www.shorten.tv/"/>
         <meta property="og:site_name" content="Shorten.tv"/>
         <meta property="fb:admins" content="lucas.ouyang.7"/>
+        <meta property="fb:app_id" content="714246128616285"/>
         <meta property="og:description" content="Real-time youtube summarization."/>
 
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -66,9 +67,7 @@
                     </div>
                     <div id="shareTools">
                         <span>Link:&nbsp; </span>
-                            <input id="linkUrl" value="" spellcheck="false"></input>
-                        <!--<span>Embed </span><input id="embedUrl" value="" 
-                            spellcheck="false"></input>-->
+                        <input id="linkUrl" value="" spellcheck="false"></input>
                     </div>
                 </div>
             </div>
@@ -88,6 +87,22 @@
                         </div>
                     </div>
                     -->
+        <!--
+            <div id="socialButtons" class="footerBox">
+                <div class="boxHeader">
+                    Make It Viral
+                </div>
+                <div id="share1">
+                    <div id="likeButton">
+                        <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fshorten.tv&amp;layout=button_count&amp;show_faces=false&amp;width=90&amp;action=like&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe>
+                    </div>
+                    <div id="tweetButton">
+                        <a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="lucasouyang" data-url="http://www.shorten.tv">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+                    </div>
+                </div>
+
+            </div>
+-->
 
                     <p>Built by <a href="http://codelucas.com">Lucas</a>.
                     <br>
