--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>shorten.tv, free & fast video summarization!</title>
+        <title>The world's first video summarizer.</title>
         <meta name="description" content="
         Shorten.tv is the first ever video summarization tool. It is both
         fast and free. This tool was built by Lucas Ou-Yang using python, flask, and ffmpeg. 
@@ -58,6 +58,8 @@
             </div>
 
             <div id="videoDiv" class="col-centered">
+                <div id="videoTitle">Generating video summary ...</div>
+                <div id="videoMetaData">Meta Data</div>
                 <div id="innerVideoDiv">
                     Loading...
                 </div>
@@ -80,38 +82,27 @@
             -->
             <footer>
                 <div class="col-lg-12 col-centered footer-div" style="">
-                    <!--
-                    <div id="tipDiv" class="footerBox col-centered">
-                        <div id="tip">
-                            &nbsp;
-                        </div>
-                    </div>
-                    -->
-        <!--
+
+                    <p>Built by <a href="http://codelucas.com">Lucas</a>, <i>let's make it viral</i>.
+                    <!--Inspired by <a href="http://youtubeinstant.com">youtube-instant</a> -->
+                    <br>
             <div id="socialButtons" class="footerBox">
-                <div class="boxHeader">
+                <!--
+                <div class="viralHeader">
                     Make It Viral
                 </div>
-                <div id="share1">
-                    <div id="likeButton">
-                        <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fshorten.tv&amp;layout=button_count&amp;show_faces=false&amp;width=90&amp;action=like&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe>
-                    </div>
-                    <div id="tweetButton">
-                        <a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="lucasouyang" data-url="http://www.shorten.tv">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
-                    </div>
-                </div>
+                -->
+                <div id="shareButtons">
+                    <iframe src="http://www.facebook.com/plugins/like.php?href=https%3A%2F%2Ffacebook%2Ecom%2Fshortentv%2F&amp;layout=button_count&amp;show_faces=false&amp;width=90&amp;action=like&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe>
 
+                    <a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="lucasouyang" data-url="http://www.shorten.tv">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+                    </div>
             </div>
--->
 
-                    <p>Built by <a href="http://codelucas.com">Lucas</a>.
-                    <br>
-                    <!--Inspired by <a href="http://youtubeinstant.com">youtube-instant</a>-->
+
                 </div>
             </footer>
         </div>
-
-        <div id="hidden"></div>
 
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
