tired as hell, idk what i did

--- a/static/index.html
+++ b/static/index.html
@@ -58,8 +58,9 @@
             </div>
 
             <div id="videoDiv" class="col-centered">
-                <div id="videoTitle">Generating video summary ...</div>
-                <div id="videoMetaData">Meta Data</div>
+                <div id="videoTitle">
+                    <span class="blackLight"> Generating video summary ...</span></div>
+                <div id="videoMetaData"></div>
                 <div id="innerVideoDiv">
                     Loading...
                 </div>
