fixed bug where video would keep sending xhr request even when changing videos

--- a/static/index.html
+++ b/static/index.html
@@ -84,7 +84,7 @@
             <footer>
                 <div class="col-lg-12 col-centered footer-div" style="">
 
-                    <p>Built by <a href="http://codelucas.com">Lucas</a>, <i>let's make it viral</i>.
+                    <p>Built by <a target="_blank" href="http://codelucas.com">Lucas</a>, <i>let's make it viral</i>.
                     <!--Inspired by <a href="http://youtubeinstant.com">youtube-instant</a> -->
                     <br>
             <div id="socialButtons" class="footerBox">
