--- a/static/index.html
+++ b/static/index.html
@@ -23,11 +23,11 @@
         <link rel="icon" href="favicon.ico" type="image/x-icon">
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style.min.css">
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script src="http://www.google.com/jsapi" type="text/javascript"></script>
-        <script src="shorten.js" type="text/javascript"></script>
+        <script src="shorten.min.js" type="text/javascript"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -81,18 +81,16 @@
                 <div id="playlist" class="clearfix">&nbsp;</div>
             </div>
             -->
+
             <footer>
                 <div class="col-lg-12 col-centered footer-div" style="">
 
                     <p>Built by <a target="_blank" href="http://codelucas.com">Lucas</a>, <i>let's make it viral</i>.
-                    <!--Inspired by <a href="http://youtubeinstant.com">youtube-instant</a> -->
-                    <br>
+                    <div class="leftBottom">
+                        This will be open sourced in a week, <a target="_blank" href="http://twitter.com/lucasouyang">meanwhile</a></div>
+                    <div class="rightBottom">
+                        Inspired by <a href="http://youtubeinstant.com">youtube-instant</a></div>
             <div id="socialButtons" class="footerBox">
-                <!--
-                <div class="viralHeader">
-                    Make It Viral
-                </div>
-                -->
                 <div id="shareButtons">
                     <iframe src="http://www.facebook.com/plugins/like.php?href=https%3A%2F%2Ffacebook%2Ecom%2Fshortentv%2F&amp;layout=button_count&amp;show_faces=false&amp;width=90&amp;action=like&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe>
 
