--- a/static/index.html
+++ b/static/index.html
@@ -12,22 +12,24 @@
 
         <meta property="og:title" content="Shorten.tv"/>
         <meta property="og:type" content="website"/>
-        <meta property="og:image" content="http://codelucas.com/images/logo.png"/>
+        <meta property="og:image" content="http://shorten.tv/imgs/logo.png"/>
         <meta property="og:url" content="http://www.shorten.tv/"/>
         <meta property="og:site_name" content="Shorten.tv"/>
         <meta property="fb:admins" content="lucas.ouyang.7"/>
         <meta property="fb:app_id" content="714246128616285"/>
-        <meta property="og:description" content="Real-time youtube summarization."/>
+        <meta property="og:description" content="The world's first ever real-time 
+        video summarizer. Built by Lucas Ou-Yang using ffmpeg, flask, 
+        python, and the youtube api."/>
 
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/style.min.css">
+        <link rel="stylesheet" href="css/style.css">
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script src="http://www.google.com/jsapi" type="text/javascript"></script>
-        <script src="shorten.min.js" type="text/javascript"></script>
+        <script src="shorten.js" type="text/javascript"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -85,9 +87,12 @@
             <footer>
                 <div class="col-lg-12 col-centered footer-div" style="">
 
-                    <p>Built by <a target="_blank" href="http://codelucas.com">Lucas</a>, <i>let's make it viral</i>.
+                    <p>Built by <b><a target="_blank" href="http://codelucas.com">Lucas</a></b>
+                        , <i>let's make it viral</i>.
+
                     <div class="leftBottom">
                         This will be open sourced in a week, <a target="_blank" href="http://twitter.com/lucasouyang">meanwhile</a></div>
+
                     <div class="rightBottom">
                         Inspired by <a href="http://youtubeinstant.com">youtube-instant</a></div>
             <div id="socialButtons" class="footerBox">
