--- a/static/index.html
+++ b/static/index.html
@@ -25,11 +25,11 @@
         <link rel="icon" href="favicon.ico" type="image/x-icon">
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style.min.css">
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script src="http://www.google.com/jsapi" type="text/javascript"></script>
-        <script src="shorten.js" type="text/javascript"></script>
+        <script src="shortentv.js" type="text/javascript"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
