added best buds

--- a/static/index.html
+++ b/static/index.html
@@ -91,10 +91,13 @@
                         , <i>let's make it viral</i>.
 
                     <div class="leftBottom">
-                        This will be open sourced in a week, <a target="_blank" href="http://twitter.com/lucasouyang">meanwhile</a></div>
+                        With aid from my best buds, <strong>Olya and Jaimel</strong></div>
+                        <!--<a target="_blank" href="http://twitter.com/lucasouyang">meanwhile</a></div>-->
 
-                    <div class="rightBottom">
-                        Inspired by <a href="http://youtubeinstant.com">youtube-instant</a></div>
+                    <!--<div class="rightBottom">
+                        With aid from  <a href="http://youtubeinstant.com">youtube-instant</a></div>-->
+                    <!--<div class="rightBottom">
+                        Inspired by <a href="http://youtubeinstant.com">youtube-instant</a></div>-->
             <div id="socialButtons" class="footerBox">
                 <div id="shareButtons">
                     <iframe src="http://www.facebook.com/plugins/like.php?href=https%3A%2F%2Ffacebook%2Ecom%2Fshortentv%2F&amp;layout=button_count&amp;show_faces=false&amp;width=90&amp;action=like&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe>
