remove jinja2 as dep, added href back to home in header, adding default background script

--- a/static/index.html
+++ b/static/index.html
@@ -40,7 +40,7 @@
             <div class="page-header" id="banner">
                 <div class="row">
                     <div class="col-lg-6">
-                        <h1>Meet <span class="orange">shorten.tv</span></h1>
+                        <h1>Meet <span class="orange"><a href="/">shorten.tv</a></span></h1>
                         <p class="lead">The world's first ever <u>video</u> summarization tool.</p>
                     </div>
 
