changing last name

--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
         <title>The world's first video summarizer.</title>
         <meta name="description" content="
         Shorten.tv is the first ever video summarization tool. It is both
-        fast and free. This tool was built by Lucas Ou-Yang using python, flask, and ffmpeg. 
+        fast and free. This tool was built by Lucas Ou using python, flask, and ffmpeg. 
         http://codelucas">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -18,7 +18,7 @@
         <meta property="fb:admins" content="lucas.ouyang.7"/>
         <meta property="fb:app_id" content="714246128616285"/>
         <meta property="og:description" content="The world's first ever real-time 
-        video summarizer. Built by Lucas Ou-Yang using ffmpeg, flask, 
+        video summarizer. Built by Lucas Ou using ffmpeg, flask, 
         python, and the youtube api."/>
 
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
